# pyconstfig

./: README.md  pyproject.toml
tests/: test_pyconstfig.py
